Fix colour contrast issue on wordcount text

--- a/app/assets/stylesheets/frontend/forms.scss
+++ b/app/assets/stylesheets/frontend/forms.scss
@@ -1152,5 +1152,5 @@ fieldset.account-contact-preferences-other-ops {
 
 .cke_wordcount span {
   font-size: 1.1875rem !important;
-  color: $grey-1 !important;
+  color: $grey-dark !important;
 }
